api: fix imported project raw data validation